# future-of-work

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
agent_os/: __init__.py  cli.py  db.py  kanban.py  schema.sql
automations/: README.md
automations/templates/: README.md  dispatcher.toml.example  gmail-ingest.toml.example  main-brief-heartbeat.toml.example  source-adapter.toml.example
knowledge/: README.md
policy/: approval.md
skills/agent-os/: SKILL.md
tests/: test_cli.py
